[gd_scene load_steps=11 format=3 uid="uid://br54ii8p0huwx"]

[ext_resource type="Script" path="res://src/gdscript/powerplants/pp_map_emplacement/pp_effects/river/pp_effects_river.gd" id="1_fkb4u"]
[ext_resource type="Shader" path="res://src/gdscript/shaders/water.gdshader" id="2_3lisu"]
[ext_resource type="Texture2D" uid="uid://bq30i0qq0gfjv" path="res://assets/textures/powerplants/effects/river.png" id="3_xttp2"]
[ext_resource type="Texture2D" uid="uid://7fcty8ohfwju" path="res://assets/textures/powerplants/effects/water.png" id="4_b5rbi"]
[ext_resource type="Texture2D" uid="uid://y8d24u83in2p" path="res://assets/textures/powerplants/effects/smoke.png" id="5_kvliq"]
[ext_resource type="Texture2D" uid="uid://rkj7ak7fxjwq" path="res://assets/textures/powerplants/effects/river_shadow.png" id="6_ald2e"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6t7a5"]
shader = ExtResource("2_3lisu")
shader_parameter/WATER_COL = Color(0.227451, 0.760784, 0.792157, 1)
shader_parameter/WATER2_COL = Color(0.0588235, 0.529412, 0.776471, 1)
shader_parameter/FOAM_COL = Color(0.871768, 0.973602, 1, 1)
shader_parameter/distortion_speed = 2.0
shader_parameter/tile = Vector2(1, 1)
shader_parameter/offset = Vector2(0, 0)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_rvgg6"]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="Gradient" id="Gradient_1a6nq"]
resource_local_to_scene = true
offsets = PackedFloat32Array(0.0133333, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0.329412)

[sub_resource type="Gradient" id="Gradient_g65sk"]
resource_local_to_scene = true
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 0.34902, 1, 1, 1, 0)

[node name="PpEffectsRiver" type="Node2D"]
script = ExtResource("1_fkb4u")

[node name="still_water" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_6t7a5")
position = Vector2(355, 150)
scale = Vector2(1.3, 1.3)
texture = ExtResource("3_xttp2")

[node name="blue_water" type="CPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_rvgg6")
position = Vector2(449, 301)
rotation = 0.0396349
amount = 30
speed_scale = 0.8
explosiveness = 0.1
draw_order = 1
texture = ExtResource("4_b5rbi")
emission_shape = 1
emission_sphere_radius = 50.0
spread = 0.0
gravity = Vector2(0, 9.81)
initial_velocity_min = 20.0
initial_velocity_max = 20.0
angular_velocity_min = -40.0
angular_velocity_max = 40.0
tangential_accel_min = -5.0
tangential_accel_max = -5.0
scale_amount_max = 1.3
color_ramp = SubResource("Gradient_1a6nq")
anim_speed_min = 0.1
anim_speed_max = 1.0

[node name="white_water" type="CPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_rvgg6")
position = Vector2(409, 308)
rotation = -0.813167
amount = 30
lifetime = 1.5
speed_scale = 0.4
explosiveness = 0.3
draw_order = 1
texture = ExtResource("5_kvliq")
emission_shape = 2
emission_sphere_radius = 40.0
spread = 0.0
gravity = Vector2(0, 130)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
angular_velocity_min = -40.0
angular_velocity_max = 40.0
linear_accel_min = 10.0
linear_accel_max = 10.0
tangential_accel_min = -5.0
tangential_accel_max = -5.0
scale_amount_min = 0.4
scale_amount_max = 0.7
color = Color(0.964706, 0.964706, 0.964706, 0.65098)
color_ramp = SubResource("Gradient_g65sk")
anim_speed_min = 0.1
anim_speed_max = 1.0

[node name="still_water_shadow" type="Sprite2D" parent="."]
position = Vector2(356, 128)
scale = Vector2(1.3, 1.3)
texture = ExtResource("6_ald2e")
